--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,13 @@ server:
 spring:
   application:
     name: cambio-service
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cambio_service?useTimezone=true&serverTimezone=UTC
     username: root
     password: rootroot
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,8 +17,13 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+
   flyway:
     url: jdbc:mysql://localhost:3306/
     schemas: cambio_service
     user: root
     password: rootroot
+
+  redis:
+    host: localhost
+    port: 6379
