--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8000
+
 spring:
   application:
     name: cambio-service
@@ -9,6 +10,10 @@ spring:
     url: jdbc:mysql://localhost:3306/cambio_service?useTimezone=true&serverTimezone=UTC
     username: root
     password: rootroot
+
+  # temp
+  main:
+    allow-circular-references: true
 
 management:
   endpoints:
@@ -36,6 +41,9 @@ management:
     user: root
     password: rootroot
 
-  redis:
-    host: localhost
-    port: 6379
+cache:
+  host: localhost
+  port: 6379
+  default-ttl: -1
+  caches-ttl:
+    cambio-expire: 1
