--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     username: root
     password: rootroot
 
-  # temp
-  main:
-    allow-circular-references: true
+  redis:
+    host: localhost
+    port: 6379
 
 management:
   endpoints:
@@ -41,9 +41,7 @@ management:
     user: root
     password: rootroot
 
-cache:
-  host: localhost
-  port: 6379
+cache-timeout:
   default-ttl: -1
   caches-ttl:
-    cambio-expire: 1
+    cambio-expire: 2
