--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	//simplementation 'org.springframework.cloud:spring-cloud-starter-config'
 
 	compileOnly 'org.projectlombok:lombok'
