--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,20 @@ spring:
     host: localhost
     port: 6379
 
+  # Producer properties
+  kafka:
+    producer:
+      bootstrap-servers: 127.0.0.1:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      group-id: group_id
+
+# Common Kafka Properties
+auto:
+  create:
+    topics:
+    enable: true
+
 management:
   endpoints:
     web:
