--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+
+	mavenLocal()
+	jcenter()
+	maven { url "https://packages.confluent.io/maven/" }
 }
 
 dependencies {
@@ -45,13 +49,16 @@ dependencies {
 	implementation 'org.flywaydb:flyway-mysql'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-	implementation "org.apache.avro:avro:1.11.0"
+	implementation 'org.apache.kafka:kafka-streams'
+	implementation 'org.apache.kafka:kafka-clients'
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation 'org.springframework.kafka:spring-kafka:2.9.0'
+	implementation 'io.confluent:kafka-avro-serializer:5.3.0'
+	implementation 'org.apache.avro:avro:1.11.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'it.ozimov:embedded-redis:0.7.3'
-
-	implementation 'org.apache.kafka:kafka-streams'
-	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 avro {
