--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,32 +1,15 @@
 server:
   port: 8000
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
   application:
     name: cambio-service
 
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cambio_service?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: rootroot
-
-  redis:
-    host: localhost
-    port: 6379
-
-  # Producer properties
   kafka:
-    producer:
-      bootstrap-servers: 127.0.0.1:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      group-id: group_id
+    auto-offset-reset: latest
+    group-id: cambio-service
+    max-poll-records: 500
+    max-retry: 5
 
 # Common Kafka Properties
 auto:
@@ -45,20 +28,6 @@ management:
       enabled: true
       status:
         order: UP,DOWN,OUT_OF_SERVICE,UNKNOWN
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-
-  flyway:
-    url: jdbc:mysql://localhost:3306/
-    schemas: cambio_service
-    user: root
-    password: rootroot
 
 cache-timeout:
   default-ttl: -1
